<resources>
    <string name="app_name">GauchoBack</string>
    <string name="title_home">Home</string>
    <string name="title_post">New Post</string>
    <string name="title_profile">Profile</string>

    <string name="sample_text">Sample Text</string>
    <string name="select_post_type">Select Post Type</string>
    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="price">Price</string>
    <string name="post">Post</string>
    <string name="name">Name</string>
    <string name="string_name">Name</string>
    <string name="email">Email</string>
    <string name="phone">Phone</string>
    <string name="preferred_communication">Preferred Communication</string>
    <string name="my_posts">My Posts</string>
    <string name="title_search">Search</string>
    <string name="housing">Housing</string>
    <string name="type">Type</string>
    <string name="selling">Selling</string>
    <string name="in_search_of">In Search Of</string>
    <string name="miscellaneous">Miscellaneous</string>
    <string name="password">Password</string>
    <string name="login">Log In</string>
    <string name="signup">Sign Up</string>
    <string name="save">Save</string>
    <string name="log_out">Log Out</string>
    <string name="contact">CONTACT</string>
    <string name="keywords">Keywords</string>
    <string name="post_type">Post Type</string>
    <string name="show_results">Show Results</string>
</resources>