<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_landing_page">

    <fragment
        android:id="@+id/navigation_home"
        android:name="edu.ucsb.cs.cs184.eran.gauchoback.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" >
        <action
            android:id="@+id/action_navigation_home_to_searchFragment"
            app:destination="@id/searchFragment" />
    </fragment>

    <fragment
        android:id="@+id/navigation_post"
        android:name="edu.ucsb.cs.cs184.eran.gauchoback.ui.post.PostFragment"
        android:label="@string/title_post"
        tools:layout="@layout/fragment_post" >
        <action
            android:id="@+id/action_navigation_post_to_navigation_home"
            app:destination="@id/navigation_home" />
    </fragment>

    <fragment
        android:id="@+id/navigation_profile"
        android:name="edu.ucsb.cs.cs184.eran.gauchoback.ui.profile.ProfileFragment"
        android:label="@string/title_profile"
        tools:layout="@layout/fragment_profile" >
        <action
            android:id="@+id/action_navigation_profile_to_navigation_landing_page"
            app:destination="@id/navigation_landing_page" />
    </fragment>

    <fragment
        android:id="@+id/navigation_landing_page"
        android:name="edu.ucsb.cs.cs184.eran.gauchoback.ui.landingpage.LandingPageFragment"
        android:label="@string/app_name"
        tools:layout="@layout/fragment_landing_page" >
        <action
            android:id="@+id/action_navigation_landing_page_to_navigation_login"
            app:destination="@id/navigation_login"
            app:popUpTo="@id/navigation_landing_page" />
        <action
            android:id="@+id/action_navigation_landing_page_to_navigation_signup"
            app:destination="@id/navigation_signup"
            app:popUpTo="@id/navigation_landing_page" />
        <action
            android:id="@+id/action_navigation_landing_page_to_navigation_home"
            app:destination="@id/navigation_home" />
    </fragment>

    <fragment
        android:id="@+id/navigation_login"
        android:name="edu.ucsb.cs.cs184.eran.gauchoback.ui.login.LogInFragment"
        android:label="@string/login"
        tools:layout="@layout/fragment_log_in" >
        <action
            android:id="@+id/action_navigation_login_to_navigation_home"
            app:destination="@id/navigation_home" />
    </fragment>

    <fragment
        android:id="@+id/navigation_signup"
        android:name="edu.ucsb.cs.cs184.eran.gauchoback.ui.signup.SignUpFragment"
        android:label="@string/signup"
        tools:layout="@layout/fragment_sign_up" >
        <action
            android:id="@+id/action_navigation_signup_to_navigation_home"
            app:destination="@id/navigation_home" />
        <action
            android:id="@+id/action_navigation_signup_to_navigation_login"
            app:destination="@id/navigation_login" />
    </fragment>
    <fragment
        android:id="@+id/searchFragment"
        android:name="edu.ucsb.cs.cs184.eran.gauchoback.ui.search.SearchFragment"
        android:label="Search"
        tools:layout="@layout/fragment_search">
        <action
            android:id="@+id/action_searchFragment_to_navigation_home"
            app:destination="@id/navigation_home" />
    </fragment>

</navigation>