<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/signUpLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.signup.SignUpFragment" >

    <TextView
        android:id="@+id/gauchoback_signUp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/bungee_regular"
        android:text="@string/app_name"
        android:textSize="40sp"
        app:layout_constraintBottom_toTopOf="@+id/signUpName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/signUpLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/bungee_regular"
        android:text="@string/signup"
        android:textColor="@color/blue"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/signUpName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/gauchoback_signUp" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/signUpName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_margin24"
        android:layout_marginTop="@dimen/_margin8"
        android:layout_marginEnd="@dimen/_margin24"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="176dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/signUpNameText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName|textCapSentences"
            android:hint="@string/name"
            android:singleLine="true" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/signUpEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_margin24"
        android:layout_marginTop="@dimen/_margin8"
        android:layout_marginEnd="@dimen/_margin24"
        app:layout_constraintTop_toBottomOf="@+id/signUpName"
        tools:layout_editor_absoluteX="192dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/signUpEmailText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:singleLine="true"
            android:inputType="textWebEmailAddress"
            android:hint="@string/email" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/signUpPhone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_margin24"
        android:layout_marginTop="@dimen/_margin8"
        android:layout_marginEnd="@dimen/_margin24"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signUpEmail"
        app:layout_constraintVertical_bias="0.0"
        tools:layout_editor_absoluteX="188dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/signUpPhoneText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/phone"
            android:singleLine="true"
            android:inputType="phone" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/signUpPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_margin24"
        android:layout_marginTop="@dimen/_margin8"
        android:layout_marginEnd="@dimen/_margin24"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signUpPhone"
        app:layout_constraintVertical_bias="0.0"
        tools:layout_editor_absoluteX="188dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/signUpPasswordText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:inputType="textWebPassword"
            android:singleLine="true" />
    </com.google.android.material.textfield.TextInputLayout>



    <Button
        android:id="@+id/signUpButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/signup"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signUpPassword" />

</androidx.constraintlayout.widget.ConstraintLayout>